// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as off by default 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSwitch
    accessibilityRole="button"
    onTintColor="#41dca4"
    style={
      Object {
        "height": 31,
        "width": 51,
      }
    }
    testID="switch"
    thumbTintColor="#ffffff"
    tintColor="#4e4e4e"
    value={false}
  />
</View>
`;

exports[`renders on 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSwitch
    accessibilityRole="button"
    onTintColor="#41dca4"
    style={
      Object {
        "height": 31,
        "width": 51,
      }
    }
    testID="switch"
    thumbTintColor="#ffffff"
    tintColor="#4e4e4e"
    value={true}
  />
</View>
`;
